syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "entities/price_list.proto";

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message UpdatePriceListRequest {
  int32 id = 1;
  float price_import = 2;
  float price_sell = 3;
}

message UpdatePriceListResponse {
  int32 code = 1;
  string message = 2;
  PriceList details = 3;
}